# openqube

./: CMakeLists.txt  COPYING  CTestConfig.cmake  project.config
cmake/: OpenQubeConfig.cmake.in  OpenQubeConfigVersion.cmake.in
docs/: CMakeLists.txt
openqube/: CMakeLists.txt  atom.cpp  basisset.h  basissetloader.h  cube.cpp  cube.h  gamessukout.cpp  gaussianset.cpp  molden.cpp  molecule.cpp  molecule.h  mopacaux.cpp  slaterset.cpp
openqube/testing/: CMakeLists.txt  testatom.cpp  testmolecule.cpp
scripts/gitsetup/: config
src/: CMakeLists.txt  atom.cpp  atom.h  basisset.cpp  basisset.h  basissetloader.cpp  basissetloader.h  cube.cpp  cube.h  gamessukout.cpp  gamessukout.h  gamessus.cpp  gamessus.h  gaussianfchk.cpp  gaussianfchk.h  gaussianset.cpp  gaussianset.h  molden.cpp  molden.h  molecule.cpp  molecule.h  mopacaux.cpp  mopacaux.h  slaterset.cpp  slaterset.h
src/testing/: CMakeLists.txt  testatom.cpp  testmolecule.cpp
src/tools/: CMakeLists.txt  makecube.cpp  qube.cpp
testfiles/h2/: rhf.cube  rhf.gamess  rhf.inp  uhf.gamess  uhf.inp
testfiles/water/: rhf.cube  rhf.dens.cube  rhf.fchk  rhf.g03  rhf.gamess  rhf.gzmat  rhf.inp  rohf.gamess  rohf.inp  uhf.cube  uhf.dens.cube  uhf.fchk  uhf.g03  uhf.gamess  uhf.gzmat  uhf.inp  uhf.sdens.cube
